Fixed issue with blocks being too low and the background not fitting the screen and requiring scrolling. This was accomplished by learning about overflow

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: url('waterfall.png');
-    background-size: cover;
+    overflow: hidden;
 }
 
 .container {
@@ -12,25 +12,24 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    height: 100vh;
+    height: 50vh;
 
 }
 
 .entertainment {
-    background-color:grey;
+    background-color: rgb(209, 209, 224, .75);
     width: 300px;
-    height: 310px;
+    height: 300px;
     margin: auto;
     display: inline-block;
     justify-content: center;
     align-items: center;
     display: flex;
     border-radius: 15px;
-    opacity: .75;
 }
 
 .productivity {
-    background-color:grey;
+    background-color:rgb(209, 209, 224, .75);
     width: 300px;
     height: 300px;
     margin: auto;
@@ -39,11 +38,10 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 15px;
-    opacity: .75;
 }
 
 .life {
-    background-color:grey;
+    background-color: rgb(209, 209, 224, .75);
     width: 300px;
     height: 300px;
     margin: auto;
@@ -52,7 +50,6 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 15px;
-    opacity: .75;
 }
 
 h1 {
